[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gravitatis-assist"
version = "0.1.0"
description = "Simulation of a gravity assist maneuver with trajectory animation."
authors = [
    { name = "Alejandro Silva." }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "pandas>=1.5",
    "pillow>=9.0",
    "scienceplots>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["."]
